# artoolkitx-calibration

./: .gitignore  Calibration.cpp  Calibration.hpp  build.sh  calc.cpp  calib_camera.cpp  calib_camera.h  calib_camera_jni.cpp  fileUploader.c  flow.cpp  loc_strings.cpp  loc_strings.hpp  prefsAndroid.cpp  prefsNull.cpp  readme.md  version.h
Android/: test_native_build.sh
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt
Android/app/src/main/java/org/artoolkitx/utilities/cameracalibration/: CameraCalibrationActivity.java  CameraCalibrationJNI.java  CameraCalibrationSettingsActivity.java  CameraCalibrationSettingsFragment.java  Config.java  PdfDocumentAdapter.java
Android/app/src/main/java/org/libsdl/app/: SDLActivity.java
Android/app/src/main/res/layout/: cameracalibrationactivity.xml  cameracalibrationsettingsactivity.xml
Android/app/src/main/res/menu/: main_menu.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/main/res/xml/: cameracalibrationsettings.xml
Eden/: EdenMessage.h
Linux/: CMakeLists.txt
iOS/: ARViewController.mm  Info.plist
iOS/Images.xcassets/AppIcon.appiconset/: Contents.json
iOS/artoolkitX Camera Calibration Utility.xcodeproj/: project.pbxproj
iOS/en.lproj/: Localizable.strings
macOS/artoolkitX Camera Calibration Utility.xcodeproj/: project.pbxproj
macOS/artoolkitX Camera Calibration Utility.xcodeproj/xcshareddata/xcschemes/: artoolkitX Camera Calibration Utility.xcscheme
